--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
       <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img"> 
       <nav> 
         <ul> 
-          <li><a href="#hero">Home</a></li> 
-          <li><a href="#about">About</a></li> 
-          <li><a href="#contact">Contact</a></li> 
+          <li><a href="#start">Start</a></li> 
+          <li><a href="#pizza">Pizza</a></li> 
+          <li><a href="#pasta">Pasta</a></li> 
+          <li><a href="#tiramisu">Tiramisù</a></li>
+          <li><a href="#cannelloni">Cannelloni</a></li> 
+          <li><a href="#polenta">Polenta</a></li> 
         </ul> 
       </nav> 
     </header> 
     <main> 
-      <section id="hero"> 
+      <section id="start"> 
         <div class="section-inner"> 
-          <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img"> 
-          <h1>Hi, I'm Boberick the llama.</h1> 
+          <h1>Italian food</h1> 
         </div> 
       </section> 
       <section id="about"> 
