--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body> 
     <header> 
-      <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img"> 
+      <img src="https://media-assets.vanityfair.it/photos/61e444841e21bc3bd54b5357/1:1/w_2832,h_2832,c_limit/pizza%20tendenze.jpg" class="profile-img"> 
       <nav> 
         <ul> 
           <li><a href="#start">Start</a></li> 
@@ -25,7 +25,7 @@
           <h1>Italian food</h1> 
         </div> 
       </section> 
-      <section id="about"> 
+      <section id="pizza"> 
         <div class="section-inner"> 
           <h2>About me</h2> 
           <p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then go back to sleep.</p> 
@@ -37,7 +37,7 @@
           </ul> 
         </div> 
       </section> 
-      <section id="contact"> 
+      <section id="pasta"> 
         <div class="section-inner"> 
           <h2>Contact me</h2> 
           <p>You can find me on:</p> 
@@ -49,6 +49,21 @@
           <p>Or, you can <a href="mailto:llama@llama.llama">send me an email</a>.</p> 
         </div> 
       </section> 
+      <section id="tiramisu"> 
+        <div class="section-inner"> 
+          <h1>Italian food</h1> 
+        </div> 
+      </section> 
+      <section id="cannelloni"> 
+        <div class="section-inner"> 
+          <h1>Italian food</h1> 
+        </div>
+      </section>
+      <section id="polenta"> 
+        <div class="section-inner"> 
+          <h1>Italian food</h1> 
+        </div> 
+       </section> 
     </main> 
     <footer> 
       © Copyright Boberick The Llama, 2017 
